# cqcppsdk

./: .clang-format  CMakeLists.txt  LICENSE  README.md  cqcppsdk.cmake
cmake/: select_filesystem.cmake
include/: cqcppsdk.h
include/cqcppsdk/: cqcppsdk.h  cqcppsdk.hpp  utils.hpp
include/cqcppsdk/utils/: string.h  string.hpp
include/dolores/: anymap.hpp  condition.hpp  current.hpp  dolores.hpp  handler.hpp  lifecycle.hpp  matcher.hpp  session.hpp  string.hpp  traits.hpp  watashi.hpp
src/: api_test.cpp
src/core/: api.h  api.hpp  api_test.cpp  common.h  common.hpp  dir.cpp  dir.h  dir.hpp  event.cpp  event.h  event.hpp  event_callback.cpp  event_callback.h  event_callback.hpp  event_export_def.h  events.inc  exception.h  init.cpp  init.h  init.hpp  logging.h  logging.hpp  menu.h  menu.hpp  message.cpp  message.h  message.hpp  message_segment_types.inc  target.h  target.hpp  type.h  type.hpp
src/dev_mode/: api.cpp  main.cpp  mock.h
src/std_mode/: api.cpp  api_funcs.inc  events.cpp  export_events.cpp
src/utils/: base64.cpp  base64.hpp  binpack.h  binpack.hpp  function.h  memory.hpp  string.cpp  string.h  string.hpp
tests/: CMakeLists.txt  test_dolores.cpp  test_dolores.hpp  test_dolores_anymap.cpp  test_dolores_condition.cpp  test_dolores_handler.cpp  test_dolores_matcher.cpp  test_dolores_session.cpp  test_dolores_string.cpp  test_dolores_traits.cpp  test_dolores_watashi.cpp  test_sdk_message.cpp
